--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
     <footer class="footer">
       <div class="container page--footer">
-        <div>
+        <div class="footer-logo">
           <h3 class="footer__logo">
             <a href="./index.html">
               <span class="footer__logo--brand">Web</span
