--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
             </a>
           </li>
         </ul>
-        <div>
+        <!-- <div>
           <button class="js-open-menu">
             <svg class="hamburger__icon" width="24" height="16">
               <use href="./images/icons.svg#icon-hamburger"></use>
             </svg>
           </button>
-        </div>
+        </div> -->
       </div>
     </header>
     <main>
