--- a/index.html
+++ b/index.html
@@ -79,56 +79,53 @@
         </button>
       </div>
 
-      <section class="section lorem-ipsum">
+      <section class="lorem-ipsum">
         <div class="container">
           <ul class="lorem-ipsum__list">
             <li class="lorem-ipsum__item">
-              <svg class="lorem-ipsum__icon">
-                <use href="./images/icons.svg#icon-antenna"></use>
-              </svg>
-            </li>
-            <li class="lorem-ipsum__item">
-              <svg class="lorem-ipsum__icon">
-                <use href="./images/icons.svg#icon-clock"></use>
-              </svg>
-            </li>
-            <li class="lorem-ipsum__item">
-              <svg class="lorem-ipsum__icon">
-                <use href="./images/icons.svg#icon-diagram"></use>
-              </svg>
-            </li>
-            <li class="lorem-ipsum__item">
-              <svg class="lorem-ipsum__icon">
-                <use href="./images/icons.svg#icon-astronaut"></use>
-              </svg>
-            </li>
-          </ul>
-
-          <ul class="lorem-ipsum-content">
-            <li class="lorem-ipsum-content__text">
-              <span class="lorem-ipsum-content__heading">LOREM IPSUM</span>
-              <p class="lorem-ipsum-content__paragraph">
+              <div class="lorem-ipsum__content">
+                <svg class="lorem-ipsum__icon">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
+              <span class="lorem-ipsum__heading">Lorem ipsum</span>
+              <p class="lorem-ipsum__paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="lorem-ipsum-content__text">
-              <span class="lorem-ipsum-content__heading">LOREM IPSUM</span>
-              <p class="lorem-ipsum-content__paragraph">
+            <li class="lorem-ipsum__item">
+              <div class="lorem-ipsum__content">
+                <svg class="lorem-ipsum__icon">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
+              <span class="lorem-ipsum__heading">Lorem ipsum</span>
+              <p class="lorem-ipsum__paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="lorem-ipsum-content__text">
-              <span class="lorem-ipsum-content__heading">LOREM IPSUM</span>
-              <p class="lorem-ipsum-content__paragraph">
+            <li class="lorem-ipsum__item">
+              <div class="lorem-ipsum__content">
+                <svg class="lorem-ipsum__icon">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
+              <span class="lorem-ipsum__heading">Lorem ipsum</span>
+              <p class="lorem-ipsum__paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li class="lorem-ipsum-content__text">
-              <span class="lorem-ipsum-content__heading">LOREM IPSUM</span>
-              <p class="lorem-ipsum-content__paragraph">
+            <li class="lorem-ipsum__item">
+              <div class="lorem-ipsum__content">
+                <svg class="lorem-ipsum__icon">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
+              <span class="lorem-ipsum__heading">Lorem ipsum</span>
+              <p class="lorem-ipsum__paragraph">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
@@ -443,7 +440,7 @@
         </div>
         <div class="footer-social">
           <p class="social-list__heading">DOŁĄCZ DO NAS</p>
-          
+
           <ul class="social-list">
             <li class="social-list__item">
               <a class="social-list__ellipse--dark" href="#">
