--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
             </a>
           </li>
         </ul>
-        <!-- <div>
-          <button class="js-open-menu">
+        <div class="hamburger">
+          <button class="hamburger__button-open js-open-menu">
             <svg class="hamburger__icon" width="24" height="16">
               <use href="./images/icons.svg#icon-hamburger"></use>
             </svg>
           </button>
-        </div> -->
+        </div>
       </div>
     </header>
     <main>
@@ -176,10 +176,18 @@
             <li class="crew__item">
               <figure class="crew__card">
                 <img
-                  src="images/ourcrew1.jpg"
+                  src="./images/crew/ourcrew1-mobile.jpg"
+                  srcset="
+                    ./images/crew/ourcrew1-mobile.jpg   450w,
+                    ./images/crew/ourcrew1-mobilex2.jpg 900w,
+                    ./images/crew/ourcrew1-tablet.jpg   354w,
+                    ./images/crew/ourcrew1-tabletx2.jpg 708w,
+                    ./images/ourcrew1                   270w
+                  "
+                  sizes="(min-width: 1200px) 270px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
                   alt="zdjęcie product designera"
-                  width="270"
-                  height="260"
                 />
                 <figcaption class="crew__caption">John Doe</figcaption>
                 <p class="crew__name">Product Designer</p>
@@ -222,10 +230,18 @@
             <li class="crew__item">
               <figure class="crew__card">
                 <img
-                  src="images/ourcrew2.jpg"
-                  alt="Frontend Developera"
-                  width="270"
-                  height="260"
+                  src="./images/crew/ourcrew2-mobile.jpg"
+                  srcset="
+                    ./images/crew/ourcrew2-mobile.jpg   450w,
+                    ./images/crew/ourcrew2-mobilex2.jpg 900w,
+                    ./images/crew/ourcrew2-tablet.jpg   354w,
+                    ./images/crew/ourcrew2-tabletx2.jpg 708w,
+                    ./images/ourcrew2                   270w
+                  "
+                  sizes="(min-width: 1200px) 270px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="zdjęcie product designera"
                 />
                 <figcaption class="crew__caption">John Doe</figcaption>
                 <p class="crew__name">Frontend Developer</p>
@@ -268,10 +284,18 @@
             <li class="crew__item">
               <figure class="crew__card">
                 <img
-                  src="images/ourcrew3.jpg"
-                  alt="zdjęcie marketingowca"
-                  width="270"
-                  height="260"
+                  src="./images/crew/ourcrew3-mobile.jpg"
+                  srcset="
+                    ./images/crew/ourcrew3-mobile.jpg   450w,
+                    ./images/crew/ourcrew3-mobilex2.jpg 900w,
+                    ./images/crew/ourcrew3-tablet.jpg   354w,
+                    ./images/crew/ourcrew3-tabletx2.jpg 708w,
+                    ./images/ourcrew3                   270w
+                  "
+                  sizes="(min-width: 1200px) 270px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="zdjęcie product designera"
                 />
                 <figcaption class="crew__caption">John Doe</figcaption>
                 <p class="crew__name">Marketing</p>
@@ -314,10 +338,18 @@
             <li class="crew__item">
               <figure class="crew__card">
                 <img
-                  src="images/ourcrew4.jpg"
-                  alt="zdjęcie UI Designera"
-                  width="270"
-                  height="260"
+                  src="./images/crew/ourcrew4-mobile.jpg"
+                  srcset="
+                    ./images/crew/ourcrew4-mobile.jpg   450w,
+                    ./images/crew/ourcrew4-mobilex2.jpg 900w,
+                    ./images/crew/ourcrew4-tablet.jpg   354w,
+                    ./images/crew/ourcrew4-tabletx2.jpg 708w,
+                    ./images/ourcrew4                   270w
+                  "
+                  sizes="(min-width: 1200px) 270px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="zdjęcie product designera"
                 />
                 <figcaption class="crew__caption">John Doe</figcaption>
                 <p class="crew__name">UI Designer</p>
@@ -480,6 +512,7 @@
           <h3 class="footer-newsletter__heading">Zapisz się do newslettera</h3>
           <div class="footer-newsletter-form">
             <form
+              class="footer-newsletter-form__form"
               name="newsletter"
               action="http://localhost:3000/posts"
               method="post"
@@ -504,6 +537,52 @@
       </div>
     </footer>
 
+    <div class="hamburger-container js-menu-container">
+      <button class="hamburger__close-btn js-close-menu">
+        <svg class="hamburger__x"><use href="./images/icons.svg#x"></use></svg>
+      </button>
+      <div class="hamburger-list-container">
+        <ul>
+          <li class="hamburger-list-container__item">
+            <a
+              href="index.html"
+              class="hamburger-list-container__link hamburger-list-container__link--active"
+              >Agencja</a
+            >
+          </li>
+          <li class="hamburger-list-container__item">
+            <a href="portfolio.html" class="hamburger-list-container__link"
+              >Portfolio</a
+            >
+          </li>
+          <li class="hamburger-list-container__item">
+            <a href="#" class="hamburger-list-container__link">Kontakt</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="hamburger-list-container__item--first">
+            <a
+              href="tel:+48111111111"
+              class="hamburger-list-container__link hamburger-list-container__link--phone"
+              >+48 111 111 111</a
+            >
+          </li>
+          <li class="hamburger-list-container__item--second">
+            <a
+              href="mailto:info@devstudio.com"
+              class="hamburger-list-container__link hamburger-list-container__link--mail"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </div>
+      <ul class="hamburger-social">
+        <li class="hamburger-social__item">Instagram</li>
+        <li class="hamburger-social__item">Twitter</li>
+        <li class="hamburger-social__item">Facebook</li>
+        <li>LinkedIn</li>
+      </ul>
+    </div>
     <!-- <--------M O D A L-------->
 
     <div class="backdrop is-hidden" data-modal>
