--- a/portfolio.html
+++ b/portfolio.html
@@ -34,11 +34,15 @@
 
         <nav>
           <ul class="navigation-list">
-            <li class="navigation-list__item ">
+            <li class="navigation-list__item">
               <a href="./index.html" class="navigation__link">Agencja</a>
             </li>
             <li class="navigation-list__item">
-              <a href="./portfolio.html" class="navigation__link navigation-list__item--active">Portfolio</a>
+              <a
+                href="./portfolio.html"
+                class="navigation__link navigation-list__item--active"
+                >Portfolio</a
+              >
             </li>
             <li class="navigation-list__item">
               <a href="" class="navigation__link">Kontakt</a>
@@ -101,10 +105,18 @@
             <li class="wrap__item">
               <figure class="figure-box">
                 <img
-                  src="images/portfolio1.jpg"
+                  src="./images/portfolio/portfolio1-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio1-mobile.jpg   450w,
+                    ./images/portfolio/portfolio1-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio1-tablet.jpg   354w,
+                    ./images/portfolio/portfolio1-tabletx2.jpg 708w,
+                    ./images/portfolio1.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
                   alt="wygląd strony internetowej wyświetlany na laptopie"
-                  width="370"
-                  height="294"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -122,11 +134,19 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                <img
-                  src="images/portfolio2.jpg"
-                  alt="grafika rywalizujących o piłkę koszykarzy"
-                  width="370"
-                  height="294"
+                 <img
+                  src="./images/portfolio/portfolio2-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio2-mobile.jpg   450w,
+                    ./images/portfolio/portfolio2-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio2-tablet.jpg   354w,
+                    ./images/portfolio/portfolio2-tabletx2.jpg 708w,
+                    ./images/portfolio2.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="koszykarze"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -146,11 +166,19 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                <img
-                  src="images/portfolio3.jpg"
-                  alt="logo restauracji Seafood"
-                  width="370"
-                  height="294"
+                  <img
+                  src="./images/portfolio/portfolio3-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio3-mobile.jpg   450w,
+                    ./images/portfolio/portfolio3-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio3-tablet.jpg   354w,
+                    ./images/portfolio/portfolio3-tabletx2.jpg 708w,
+                    ./images/portfolio3.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="restauracja seafood"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -161,18 +189,28 @@
                   </p>
                 </div>
                 <div class="wrap__box">
-                  <figcaption class="wrap__img-title">Restauracja Seafood</figcaption>
+                  <figcaption class="wrap__img-title">
+                    Restauracja Seafood
+                  </figcaption>
                   <p class="wrap__img-description">Aplikacja</p>
                 </div>
               </figure>
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                <img
-                  src="images/portfolio4.jpg"
-                  alt="słuchawki nauszne"
-                  width="370"
-                  height="294"
+                  <img
+                  src="./images/portfolio/portfolio4-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio4-mobile.jpg   450w,
+                    ./images/portfolio/portfolio4-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio4-tablet.jpg   354w,
+                    ./images/portfolio/portfolio4-tabletx2.jpg 708w,
+                    ./images/portfolio4.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="słuchawki"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -190,11 +228,19 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                <img
-                  src="images/portfolio5.jpg"
-                  alt="dwa pudełka o różnych wzorach i rozmiarach"
-                  width="370"
-                  height="294"
+                  <img
+                  src="./images/portfolio/portfolio5-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio5-mobile.jpg   450w,
+                    ./images/portfolio/portfolio5-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio5-tablet.jpg   354w,
+                    ./images/portfolio/portfolio5-tabletx2.jpg 708w,
+                    ./images/portfolio5.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="projekt boxy"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -212,11 +258,19 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                <img
-                  src="images/portfolio6.jpg"
-                  alt="ekran wyświetlający stronę internetową z logo świata"
-                  width="370"
-                  height="294"
+                  <img
+                  src="./images/portfolio/portfolio6-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio6-mobile.jpg   450w,
+                    ./images/portfolio/portfolio6-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio6-tablet.jpg   354w,
+                    ./images/portfolio/portfolio6-tabletx2.jpg 708w,
+                    ./images/portfolio6.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="strona internetowa na monitorze"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -236,11 +290,19 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                <img
-                  src="images/portfolio7.jpg"
-                  alt="zdjęcie magazynu i jego zawartości"
-                  width="370"
-                  height="294"
+                  <img
+                  src="./images/portfolio/portfolio7-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio7-mobile.jpg   450w,
+                    ./images/portfolio/portfolio7-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio7-tablet.jpg   354w,
+                    ./images/portfolio/portfolio7-tabletx2.jpg 708w,
+                    ./images/portfolio7.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="magazyn limited edition"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -260,11 +322,19 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                <img
-                  src="images/portfolio8.jpg"
-                  alt="biała etykieta zawieszona na rzemieniu"
-                  width="370"
-                  height="294"
+                  <img
+                  src="./images/portfolio/portfolio8-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio8-mobile.jpg   450w,
+                    ./images/portfolio/portfolio8-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio8-tablet.jpg   354w,
+                    ./images/portfolio/portfolio8-tabletx2.jpg 708w,
+                    ./images/portfolio8.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
+                  alt="plakietka LAB"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -283,11 +353,19 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                <img
-                  src="images/portfolio9.jpg"
+                  <img
+                  src="./images/portfolio/portfolio9-mobile.jpg"
+                  srcset="
+                    ./images/portfolio/portfolio9-mobile.jpg   450w,
+                    ./images/portfolio/portfolio9-mobilex2.jpg 900w,
+                    ./images/portfolio/portfolio9-tablet.jpg   354w,
+                    ./images/portfolio/portfolio9-tabletx2.jpg 708w,
+                    ./images/portfolio9.jpg                    370w
+                  "
+                  sizes="(min-width: 1200px) 370px,
+                        (min-width: 768px) calc(50vw - 30px),
+                        (min-width: 320px) calc(100vw - 30px)"
                   alt="praca na laptopie"
-                  width="370"
-                  height="294"
                 />
                 <div class="overlay">
                   <p class="overlay__paragraph">
@@ -298,7 +376,9 @@
                   </p>
                 </div>
                 <div class="wrap__box">
-                  <figcaption class="wrap__img-title">Growing Business</figcaption>
+                  <figcaption class="wrap__img-title">
+                    Growing Business
+                  </figcaption>
                   <p class="wrap__img-description">Aplikacja</p>
                 </div>
               </figure>
@@ -310,7 +390,7 @@
 
     <!-- <--------F O O T E R-------->
 
-   <footer class="footer">
+    <footer class="footer">
       <div class="container page--footer">
         <div>
           <h3 class="footer__logo">
@@ -332,7 +412,7 @@
         </div>
         <div class="footer-social">
           <p class="social-list__heading">DOŁĄCZ DO NAS</p>
-          
+
           <ul class="social-list">
             <li class="social-list__item">
               <a class="social-list__ellipse--dark" href="#">
