--- a/index.html
+++ b/index.html
@@ -539,38 +539,38 @@
 
     <div class="hamburger-container js-menu-container">
       <button class="hamburger__close-btn js-close-menu">
-        <svg class="hamburger__x"><use href="./images/icons.svg#x"></use></svg>
+        <svg class="hamburger__x"><use href="./images/icons.svg#icon-close"></use></svg>
       </button>
-      <div class="hamburger-list-container">
-        <ul>
-          <li class="hamburger-list-container__item">
+      <div class="hamburger-content">
+        <ul class="hamburger-content__list">
+          <li class="hamburger-content__item">
             <a
-              href="index.html"
-              class="hamburger-list-container__link hamburger-list-container__link--active"
+              href="./index.html"
+              class="hamburger-content__link hamburger-content__link--active"
               >Agencja</a
             >
           </li>
-          <li class="hamburger-list-container__item">
-            <a href="portfolio.html" class="hamburger-list-container__link"
+          <li class="hamburger-content__item">
+            <a href="./portfolio.html" class="hamburger-content__link"
               >Portfolio</a
             >
           </li>
-          <li class="hamburger-list-container__item">
-            <a href="#" class="hamburger-list-container__link">Kontakt</a>
+          <li class="hamburger-content__item">
+            <a href="#" class="hamburger-content__link">Kontakt</a>
           </li>
         </ul>
         <ul>
-          <li class="hamburger-list-container__item--first">
+          <li class="hamburger-content__item--first">
             <a
               href="tel:+48111111111"
-              class="hamburger-list-container__link hamburger-list-container__link--phone"
+              class="hamburger-content__link hamburger-content__link--phone"
               >+48 111 111 111</a
             >
           </li>
-          <li class="hamburger-list-container__item--second">
+          <li class="hamburger-content__item--second">
             <a
               href="mailto:info@devstudio.com"
-              class="hamburger-list-container__link hamburger-list-container__link--mail"
+              class="hamburger-content__link hamburger-content__link--mail"
               >info@devstudio.com</a
             >
           </li>
