--- a/portfolio.html
+++ b/portfolio.html
@@ -390,9 +390,9 @@
 
     <!-- <--------F O O T E R-------->
 
-    <footer class="footer">
+   <footer class="footer">
       <div class="container page--footer">
-        <div>
+        <div class="footer-logo">
           <h3 class="footer__logo">
             <a href="./index.html">
               <span class="footer__logo--brand">Web</span
@@ -452,6 +452,7 @@
           <h3 class="footer-newsletter__heading">Zapisz się do newslettera</h3>
           <div class="footer-newsletter-form">
             <form
+              class="footer-newsletter-form__form"
               name="newsletter"
               action="http://localhost:3000/posts"
               method="post"
