--- a/portfolio.html
+++ b/portfolio.html
@@ -71,6 +71,13 @@
           </li>
         </ul>
       </div>
+      <div class="hamburger">
+        <button class="hamburger__button-open js-open-menu">
+          <svg class="hamburger__icon" width="24" height="16">
+            <use href="./images/icons.svg#icon-hamburger"></use>
+          </svg>
+        </button>
+      </div>
     </header>
     <main>
       <!-- <--------B U T T O N S-------->
@@ -134,7 +141,7 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                 <img
+                <img
                   src="./images/portfolio/portfolio2-mobile.jpg"
                   srcset="
                     ./images/portfolio/portfolio2-mobile.jpg   450w,
@@ -166,7 +173,7 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                  <img
+                <img
                   src="./images/portfolio/portfolio3-mobile.jpg"
                   srcset="
                     ./images/portfolio/portfolio3-mobile.jpg   450w,
@@ -198,7 +205,7 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                  <img
+                <img
                   src="./images/portfolio/portfolio4-mobile.jpg"
                   srcset="
                     ./images/portfolio/portfolio4-mobile.jpg   450w,
@@ -228,7 +235,7 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                  <img
+                <img
                   src="./images/portfolio/portfolio5-mobile.jpg"
                   srcset="
                     ./images/portfolio/portfolio5-mobile.jpg   450w,
@@ -258,7 +265,7 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                  <img
+                <img
                   src="./images/portfolio/portfolio6-mobile.jpg"
                   srcset="
                     ./images/portfolio/portfolio6-mobile.jpg   450w,
@@ -290,7 +297,7 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                  <img
+                <img
                   src="./images/portfolio/portfolio7-mobile.jpg"
                   srcset="
                     ./images/portfolio/portfolio7-mobile.jpg   450w,
@@ -322,7 +329,7 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                  <img
+                <img
                   src="./images/portfolio/portfolio8-mobile.jpg"
                   srcset="
                     ./images/portfolio/portfolio8-mobile.jpg   450w,
@@ -353,7 +360,7 @@
             </li>
             <li class="wrap__item">
               <figure class="figure-box">
-                  <img
+                <img
                   src="./images/portfolio/portfolio9-mobile.jpg"
                   srcset="
                     ./images/portfolio/portfolio9-mobile.jpg   450w,
@@ -390,7 +397,7 @@
 
     <!-- <--------F O O T E R-------->
 
-   <footer class="footer">
+    <footer class="footer">
       <div class="container page--footer">
         <div class="footer-logo">
           <h3 class="footer__logo">
