--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
         <div class="container">
           <h2 class="section__heading">Nasi Klienci</h2>
           <ul class="client__list">
-            <li class="client__item">
+            <li>
               <a class="client__link" href="#">
                 <svg class="client__icon">
                   <use href="./images/icons.svg#icon-Logo-5"></use>
@@ -405,7 +405,7 @@
                 <icons class="svg" id="icon-logo-1"></icons>
               </a>
             </li>
-            <li class="client__item">
+            <li>
               <a class="client__link" href="#">
                 <svg class="client__icon">
                   <use href="./images/icons.svg#icon-Logo-4"></use>
@@ -413,7 +413,7 @@
                 <icons class="svg" id="icon-logo-1"></icons>
               </a>
             </li>
-            <li class="client__item">
+            <li>
               <a class="client__link" href="#">
                 <svg class="client__icon">
                   <use href="./images/icons.svg#icon-Logo-3"></use>
@@ -421,7 +421,7 @@
                 <icons class="svg" id="icon-logo-1"></icons>
               </a>
             </li>
-            <li class="client__item">
+            <li>
               <a class="client__link" href="#">
                 <svg class="client__icon">
                   <use href="./images/icons.svg#icon-Logo-2"></use>
@@ -429,7 +429,7 @@
                 <icons class="svg" id="icon-logo-1"></icons>
               </a>
             </li>
-            <li class="client__item">
+            <li>
               <a class="client__link" href="#">
                 <svg class="client__icon">
                   <use href="./images/icons.svg#icon-Logo-1"></use>
@@ -437,7 +437,7 @@
                 <icons class="svg" id="icon-logo-1"></icons>
               </a>
             </li>
-            <li class="client__item">
+            <li>
               <a class="client__link" href="#">
                 <svg class="client__icon">
                   <use href="./images/icons.svg#icon-Logo"></use>
@@ -517,7 +517,7 @@
               action="http://localhost:3000/posts"
               method="post"
             >
-              <label class="footer-newsletter-form__email">
+              <label>
                 <input
                   class="footer-newsletter-form__input"
                   type="email"
