--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./sass/main.css" />
-    <link rel="stylesheet" href="./css/main.scss" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+
     <title>Zadanie Domowe</title>
   </head>
   <body>
@@ -517,7 +518,7 @@
               action="http://localhost:3000/posts"
               method="post"
             >
-              <label>
+              <label class="footer-newsletter-form__label">
                 <input
                   class="footer-newsletter-form__input"
                   type="email"
@@ -539,7 +540,9 @@
 
     <div class="hamburger-container js-menu-container">
       <button class="hamburger__close-btn js-close-menu">
-        <svg class="hamburger__x"><use href="./images/icons.svg#icon-close"></use></svg>
+        <svg class="hamburger__x">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
       </button>
       <div class="hamburger-content">
         <ul class="hamburger-content__list">
@@ -611,7 +614,7 @@
               class="modal-form__input"
               type="text"
               name="name"
-              id="name"
+              id="user_name"
               required
             />
           </label>
@@ -625,7 +628,7 @@
               class="modal-form__input"
               type="text"
               name="name"
-              id="name"
+              id="user_phone"
               required
             />
           </label>
@@ -638,16 +641,17 @@
               class="modal-form__input"
               type="text"
               name="name"
-              id="name"
+              id="user_email"
               required
             />
           </label>
-          <label class="modal-form__label">
+          <label class="modal-form__label" for="comment">
             Komentarz
             <textarea
               class="modal-form__textarea"
               type="text"
               name="comment"
+              id="comment"
               placeholder="Wprowadź tekst"
             ></textarea>
           </label>
