--- a/portfolio.html
+++ b/portfolio.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./sass/main.css" />
-    <link rel="stylesheet" href="./css/style.scss" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+
     <title>Zadanie domowe</title>
   </head>
 
@@ -483,5 +483,54 @@
         </div>
       </div>
     </footer>
+    <div class="hamburger-container js-menu-container">
+      <button class="hamburger__close-btn js-close-menu">
+        <svg class="hamburger__x">
+          <use href="./images/icons.svg#icon-close"></use>
+        </svg>
+      </button>
+      <div class="hamburger-content">
+        <ul class="hamburger-content__list">
+          <li class="hamburger-content__item">
+            <a
+              href="./index.html"
+              class="hamburger-content__link hamburger-content__link--active"
+              >Agencja</a
+            >
+          </li>
+          <li class="hamburger-content__item">
+            <a href="./portfolio.html" class="hamburger-content__link"
+              >Portfolio</a
+            >
+          </li>
+          <li class="hamburger-content__item">
+            <a href="#" class="hamburger-content__link">Kontakt</a>
+          </li>
+        </ul>
+        <ul>
+          <li class="hamburger-content__item--first">
+            <a
+              href="tel:+48111111111"
+              class="hamburger-content__link hamburger-content__link--phone"
+              >+48 111 111 111</a
+            >
+          </li>
+          <li class="hamburger-content__item--second">
+            <a
+              href="mailto:info@devstudio.com"
+              class="hamburger-content__link hamburger-content__link--mail"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+      </div>
+      <ul class="hamburger-social">
+        <li class="hamburger-social__item">Instagram</li>
+        <li class="hamburger-social__item">Twitter</li>
+        <li class="hamburger-social__item">Facebook</li>
+        <li>LinkedIn</li>
+      </ul>
+    </div>
+    <script defer src="./js/mobile-menu.js"></script>
   </body>
 </html>
